# fast-telemetry

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md
.github/workflows/: ci.yml
crates/fast-telemetry/: Cargo.toml  README.md
crates/fast-telemetry-export/: Cargo.toml  README.md
crates/fast-telemetry-export/benches/: clickhouse_export.rs
crates/fast-telemetry-export/src/: dogstatsd.rs  lib.rs  otlp.rs  spans.rs  sweeper.rs
crates/fast-telemetry-export/src/clickhouse/: mod.rs  otel_standard.rs
crates/fast-telemetry-export/tests/: clickhouse_integration.rs
crates/fast-telemetry-macros/: Cargo.toml  README.md
crates/fast-telemetry-macros/src/: lib.rs
crates/fast-telemetry/bench/: BENCHMARK_REPORT.md  README.md  docker-compose.clickhouse.yml  docker-compose.dogstatsd.yml  docker-compose.otlp.yml  harness-presentation.html  preflight.sh  render_suite_report.py  run-bench-matrix.sh  run-bench-suite.sh  run-cache-bench.sh  run-clickhouse.sh  run-otlp-collector.sh  run-span-bench.sh  summarize_bench.py  summarize_perf.py
crates/fast-telemetry/bench/workloads/: cache_contention.rs  dynamic_series_stress.rs  process_usage.rs  span_contention.rs
crates/fast-telemetry/benches/: fast_vs_otel.rs
crates/fast-telemetry/examples/: README.md  basic.rs  labeled.rs  service_metrics.rs
crates/fast-telemetry/src/: lib.rs  temporality.rs
crates/fast-telemetry/src/export/: clickhouse.rs  mod.rs  otlp.rs
crates/fast-telemetry/src/export/text/: dogstatsd.rs  fast_format.rs  mod.rs  prometheus.rs
crates/fast-telemetry/src/internal/: exp_buckets.rs  mod.rs
crates/fast-telemetry/src/metric/: counter.rs  distribution.rs  gauge.rs  histogram.rs  label.rs  labeled_counter.rs  labeled_gauge.rs  labeled_histogram.rs  max_gauge.rs  max_gauge_f64.rs  min_gauge.rs  min_gauge_f64.rs  mod.rs  sampled_timer.rs
crates/fast-telemetry/src/metric/dynamic/: cache.rs  counter.rs  distribution.rs  gauge.rs  gauge_i64.rs  histogram.rs  mod.rs
crates/fast-telemetry/src/span/: collector.rs  context.rs  ids.rs  mod.rs
crates/fast-telemetry/tests/: counter_miri_concurrency_test.rs  derive_label_test.rs  distribution_derive_test.rs  distribution_miri_race_test.rs  distribution_shuttle_test.rs  dogstatsd_validation_test.rs  dynamic_labels_test.rs  export_test.rs  labeled_export_test.rs  otel_parity_test.rs  sampled_timer_export_test.rs  temporality_test.rs
crates/ophanim/: Cargo.toml  README.md
crates/ophanim-export/: Cargo.toml
crates/ophanim-export/src/: dogstatsd.rs  lib.rs  otlp.rs  spans.rs  sweeper.rs
crates/ophanim-macros/: Cargo.toml  README.md
crates/ophanim-macros/src/: lib.rs
crates/ophanim/bench/: BENCHMARK_REPORT.md  README.md  docker-compose.dogstatsd.yml  docker-compose.otlp.yml  otel-collector-config.yml  render_suite_report.py  run-bench-matrix.sh  run-bench-suite.sh  run-cache-bench.sh  run-dogstatsd-collector.sh  run-log-bench.sh  run-otlp-collector.sh  run-span-bench.sh  summarize_bench.py
crates/ophanim/bench/workloads/: cache_contention.rs  dynamic_series_stress.rs  span_contention.rs  thread_affinity.rs
crates/ophanim/benches/: fast_vs_otel.rs
crates/ophanim/examples/: README.md  basic.rs  labeled.rs  service_metrics.rs
crates/ophanim/src/: lib.rs
crates/ophanim/src/export/: mod.rs  otlp.rs
crates/ophanim/src/internal/: thread_id.rs
crates/ophanim/src/metric/: gauge_f64.rs  labeled_counter.rs  labeled_gauge.rs  labeled_histogram.rs
crates/ophanim/src/metric/dynamic/: counter.rs  mod.rs
crates/ophanim/src/span/: context.rs  mod.rs  types.rs
crates/ophanim/tests/: counter_miri_concurrency_test.rs  derive_label_test.rs  distribution_derive_test.rs  distribution_miri_race_test.rs  distribution_shuttle_test.rs  dogstatsd_validation_test.rs  dynamic_labels_test.rs  export_test.rs  labeled_export_test.rs  otel_parity_test.rs  temporality_test.rs
examples/: README.md
examples/demo/: Cargo.toml
examples/demo/src/: main.rs
