[workspace]
members = ["crates/*", "examples/*"]
resolver = "3"

[workspace.package]
authors = [
    "Ryan Daum <ryan.daum@gmail.com>",
    "Devon Tietjen <devon@eden.dev>",
    "Mitul Dhawan <mitul@eden.dev>",
]
homepage = "https://github.com/eden-dev-inc/fast-telemetry"
license = "Apache-2.0"
repository = "https://github.com/eden-dev-inc/fast-telemetry"
rust-version = "1.85"

[workspace.dependencies]
# Local crates
fast-telemetry = { path = "crates/fast-telemetry", version = "0.2.0" }
fast-telemetry-macros = { path = "crates/fast-telemetry-macros", version = "0.2.0" }
fast-telemetry-export = { path = "crates/fast-telemetry-export", version = "0.2.0" }

# --- Core: fast-telemetry runtime dependencies ---
crossbeam-utils = "0.8"
itoa = "1"
parking_lot = "0.12"
ryu = "1"
uuid = { version = "1", features = ["v4"] }

# --- Macros: fast-telemetry-macros proc-macro dependencies ---
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits", "full", "parsing"] }

# --- Export: fast-telemetry-export runtime dependencies ---
log = "0.4"
memchr = "2"                                                              # dogstatsd feature
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "time", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }

# --- OTLP: fast-telemetry + fast-telemetry-export otlp feature ---
flate2 = "1"
prost = "0.13"                                                            # pinned by opentelemetry-proto 0.30
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }

# --- ClickHouse: fast-telemetry-export clickhouse feature ---
indexmap = "2"
klickhouse = { version = "0.14", default-features = false, features = ["derive", "compression"] }

# --- Dev/test/bench only ---
criterion = { version = "0.8", features = ["async_tokio", "html_reports"] }
metrics = "0.24.3"
metrics-util = { version = "0.20.1", features = ["registry", "storage"] }
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
shuttle = "0.8"
statsd-parser = "0.3"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["clickhouse"] }

[profile.release]
strip = true

[profile.bench]
inherits = "release"
lto = true
codegen-units = 1
strip = false
