[package]
name = "fast-telemetry-macros"
version = "0.1.1"
edition = "2024"
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Derive macros for fast-telemetry metric export and enum labels"
documentation = "https://docs.rs/fast-telemetry-macros"
keywords = ["telemetry", "metrics", "proc-macro", "prometheus", "dogstatsd"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
