[package]
name = "ophanim-export"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
description = "Export adapters for ophanim metrics: DogStatsD, OTLP, span export, and stale-series sweeping"

[features]
default = ["dogstatsd", "otlp"]
dogstatsd = ["dep:memchr"]
otlp = ["dep:flate2", "dep:prost", "dep:reqwest", "ophanim/otlp"]

[dependencies]
log = { workspace = true }
memchr = { workspace = true, optional = true }
ophanim = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

# otlp
flate2 = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
