[package]
name = "ophanim-demo"
version = "0.0.0"
edition = "2024"
publish = false


[dependencies]
ophanim = { workspace = true, features = ["macros", "otlp"] }
ophanim-export = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = { workspace = true }
